--- a/_posts/2018-06-11-gocker.md
+++ b/_posts/2018-06-11-gocker.md
@@ -23,3 +23,37 @@ runCommand[main_command.go<br />runCommand] --> NewParentProcess[container<br />
 NewParentProcess[container<br />container_process.go<br />NewParentProcess] --> RunContainerInitProcess[container<br />init.go<br />RunContainerInitProcess]
 
 ```
+
+
+## Env
+```
+export GOROOT=/usr/local/go
+export GOPATH=$HOME/go
+export PATH=$PATH:$GOROOT/bin:$GOPATH/bin
+```
+
+
+```
+94  export GOROOT=/usr/local/go
+95  export GOPATH=$HOME/go
+96  export PATH=$PATH:$GOROOT/bin:$GOPATH/bin
+97  go get github.com/sirupsen/logrus
+98  ls
+99  go build .
+100  go build -a
+101  go build -a .
+102  go get github.com/sirupsen/logrus
+103  go build -a .
+104  go get github.com/urfave/cli
+105  go build -a .
+106  go get github.com/xianlubird
+107  go get github.com/xianlubird/mydocker
+108  ls
+109  go get github.com/inputx/gocker
+110  history
+```
+
+
+
+Ref
+* [GOPATH](https://til.codes/how-do-i-set-the-gopath-environment-variable-on-ubuntu/)
