add post, update post and update page

--- a/_posts/2018-06-12-go-dep.md
+++ b/_posts/2018-06-12-go-dep.md
@@ -28,3 +28,14 @@ export PATH=$PATH:$GOROOT/bin:$GOPATH/bin
 ```
 go get -u -v github.com/golang/dep/cmd/dep
 ```
+
+
+# glide 
+```
+curl https://glide.sh/get | sh
+
+```
+
+* init project with packages `glide init` or `glide create`
+* install all packages `glide install`
+* add new package `glide get github.com/dmgk/faker`
