update page and posts

--- a/_posts/2018-06-11-gocker.md
+++ b/_posts/2018-06-11-gocker.md
@@ -32,7 +32,7 @@ export GOPATH=$HOME/go
 export PATH=$PATH:$GOROOT/bin:$GOPATH/bin
 ```
 
-
+## Build
 ```
 94  export GOROOT=/usr/local/go
 95  export GOPATH=$HOME/go
@@ -53,6 +53,11 @@ export PATH=$PATH:$GOROOT/bin:$GOPATH/bin
 110  history
 ```
 
+### Build with glide
+```
+curl https://glide.sh/get | sh
+glide install
+```
 
 
 Ref
