--- a/_posts/2018-06-12-go-dep.md
+++ b/_posts/2018-06-12-go-dep.md
@@ -4,27 +4,19 @@ title: go dep
 date: 2018-06-12 12:29 +0000
 ---
 
-```
-  0 apk add git nano go
-  11 apk add --no-cache musl-dev
-   4 export GOROOT=/usr/lib/go
-   5 export GOPATH=$HOME/go
-   6 export PATH=$PATH:$GOROOT/bin:$GOPATH/bin
-  
-  10 go get github.com/tools/godep
-  
-
-```
 
 
 ```
 apk add git nano go musl-dev
 
-export GOROOT=/usr/lib/go
+export GOROOT=/usr/lib/go # /usr/local/go in some linux
+export GOROOT=/usr/local/go
 export GOPATH=$HOME/go
 export PATH=$PATH:$GOROOT/bin:$GOPATH/bin
 ```
 
 ```
 go get -u -v github.com/golang/dep/cmd/dep
+
+dep init
 ```
