--- a/_posts/2018-07-01-ml-math.md
+++ b/_posts/2018-07-01-ml-math.md
@@ -4,6 +4,11 @@ title: ML Math
 date: 2018-07-01 06:31 +0000
 ---
 
+# scalar, vector and tensor
+
+
+
+
 * [hand book](https://blog.csdn.net/buptgshengod/article/details/78581111)
 * [basic](https://www.leiphone.com/news/201711/9KEJpwEWVxcULtpH.html)
 * [basic 2](http://gitbook.cn/books/59f47b798f60cb5ae9158cbc/index.html)
