--- a/_posts/2018-06-12-go-dep.md
+++ b/_posts/2018-06-12-go-dep.md
@@ -9,7 +9,9 @@ date: 2018-06-12 12:29 +0000
 ```
 apk add git nano go musl-dev
 
-export GOROOT=/usr/lib/go # /usr/local/go in some linux
+# /usr/local/go in some linux
+# /usr/local/go in macos
+export GOROOT=/usr/lib/go 
 export GOROOT=/usr/local/go
 export GOPATH=$HOME/go
 export PATH=$PATH:$GOROOT/bin:$GOPATH/bin
@@ -27,6 +29,7 @@ dep init
 ```
 curl https://glide.sh/get | sh
 
+ln -s $GOPATH/bin/glide $GOPATH/bin/godep 
 ```
 
 * init project with packages `glide init` or `glide create`
