--- a/_posts/2018-07-01-ml-math.md
+++ b/_posts/2018-07-01-ml-math.md
@@ -14,3 +14,4 @@ date: 2018-07-01 06:31 +0000
 * [basic 2](http://gitbook.cn/books/59f47b798f60cb5ae9158cbc/index.html)
 * [channel](https://segmentfault.com/a/1190000012575711)
 * [math detail](https://juejin.im/entry/59721fb16fb9a06bb95b00d5)
+* [list](https://www.ibm.com/developerworks/community/blogs/3302cc3b-074e-44da-90b1-5055f1dc0d9c/entry/the-mathematics-of-machine-learning?lang=en)
