--- a/_posts/2018-04-30-travis-ci.md
+++ b/_posts/2018-04-30-travis-ci.md
@@ -7,3 +7,13 @@ date: 2018-04-30 22:52 +1000
 https://docs.travis-ci.com/user/docker/
 https://docs.travis-ci.com/user/languages/ruby/#stq=&stp=0
 https://docs.travis-ci.com/user/deployment/s3/
+
+## Encryption keys
+
+```sh
+$ docker run -it --rm -v /blog:/blog dockercraft/travis /bin/sh
+$ cd /blog # docker
+$ travis encrypt "your token / key" # docker
+```
+
+
