--- a/_posts/2018-08-06-pipenv.md
+++ b/_posts/2018-08-06-pipenv.md
@@ -5,6 +5,7 @@ date: 2018-08-06 05:31 +0000
 ---
 
 > Pipenv — The officially recommended Python packaging tool from Python.org[^1]
+
 [^1]: [stackoverflow post](https://stackoverflow.com/questions/46330327/please-explain-the-usage-of-pipfile-and-pipfile-lock)
 
 
@@ -17,6 +18,27 @@ brew install pipenv
 
 [^2]: [Official website](https://docs.pipenv.org)
 
+## Pipfile
+
+### Example
+
+```
+[[source]]
+url = "https://pypi.python.org/simple"
+verify_ssl = true
+name = "pypi"
+
+[dev-packages]
+
+[requires]
+python_version = "3.6"
+
+[packages]
+
+flask = "==0.12.2"
+requests = "==2.18.4"
+
+```
 
 
 
