--- a/_posts/2018-07-18-python.md
+++ b/_posts/2018-07-18-python.md
@@ -66,3 +66,4 @@ file = open('/path/to/file', 'a', cache=true)
 * [design patten](https://blog.csdn.net/ruoyunliufeng/article/details/78302889)
 * [design patten](http://blog.jobbole.com/62023/)
 * [python advantage](https://eastlakeside.gitbooks.io/interpy-zh/content/decorators/)
+* [Lamdba map and filter in python](https://medium.com/@happymishra66/lambda-map-and-filter-in-python-4935f248593)
