create post, update post, update page

--- a/_posts/2018-07-18-python.md
+++ b/_posts/2018-07-18-python.md
@@ -60,3 +60,10 @@ sum(1,2,3,4)
 file = open('/path/to/file', 'a', cache=true)
 ```
 
+
+## Resources
+* [book](https://download.csdn.net/download/yonghu99999/9799521)
+* [design patten](https://blog.csdn.net/ruoyunliufeng/article/details/78302889)
+* [design patten](http://blog.jobbole.com/62023/)
+* [python advantage](https://eastlakeside.gitbooks.io/interpy-zh/content/decorators/)
+* [Lamdba map and filter in python](https://medium.com/@happymishra66/lambda-map-and-filter-in-python-4935f248593)
