update page and post

--- a/_posts/2018-09-11-php-cli.md
+++ b/_posts/2018-09-11-php-cli.md
@@ -8,5 +8,10 @@ start php server `php -S localhost:8000 -t ./`
 
 check php model `php -m | grep soap`
 
+## Install xDebug via pecl
+
+```
+pecl install xdebug
+```
 
 ---
