--- a/_posts/2018-11-05-symfony-4.md
+++ b/_posts/2018-11-05-symfony-4.md
@@ -31,7 +31,7 @@ It includes
 ## Security checker
 `composer require security-checker`
 
-`bin/console security:check
+`bin/console security:check`
 
 
 ## 
