--- a/_posts/2018-11-05-symfony-4.md
+++ b/_posts/2018-11-05-symfony-4.md
@@ -34,7 +34,44 @@ It includes
 `bin/console security:check`
 
 
-## 
+## DB
+
+### Initial
+```bash 
+composer require doctrine
+composer require maker
+composer require doctrine/doctrine-migrations-bundle
+```
+
+### Create database
+```bash
+# make sure .env file has correct DATABASE_URL
+php bin/console doctrine:database:create
+```
+
+
+### Make an entity
+
+```bash
+php bin/console make:entity
+```
+
+### Make a migration
+```bash
+php bin/console make:migration
+```
+
+
+### Migrate
+```bash
+php bin/console doctrine:migrations:migrate
+```
+
+### Checking
+```bash
+php bin/console doctrine:migrations:status
+```
+
 
 
 ---
