--- a/_posts/2018-12-27-ldap.md
+++ b/_posts/2018-12-27-ldap.md
@@ -28,5 +28,30 @@ apt-get install migrationtools
 - [migrationtools issue](https://kb.brightcomputing.com/faq/index.php?action=artikel&cat=13&id=157&artlang=en)
 
 
+# PHP sample
+```php
+$ldaprdn  = 'user@domain';
 
+$ldappass = 'password';
+
+$ldapconn = ldap_connect("server.address", 389) or die("Could not connect to LDAP server.");
+
+ldap_set_option($ldapconn, LDAP_OPT_PROTOCOL_VERSION, 3);
+ldap_set_option($ldapconn, LDAP_OPT_REFERRALS, 0);
+
+if ($ldapconn) {
+
+    // binding to ldap server
+    $ldapbind = ldap_bind($ldapconn, $ldaprdn, $ldappass) or die("can not bind");
+
+    // verify binding
+    if ($ldapbind) {
+        echo "LDAP bind successful...";
+    } else {
+        echo "LDAP bind failed...";
+    }
+
+}
+
+```
 ---
