--- a/_posts/2018-12-27-ldap.md
+++ b/_posts/2018-12-27-ldap.md
@@ -9,11 +9,20 @@ docker pull osixia/openldap
 
 docker run --rm --env LDAP_TLS=false --env LDAP_ORGANISATION="vocus" --env LDAP_DOMAIN="vocus.com.au" --env LDAP_ADMIN_PASSWORD="pass" -p 389:389 -p 689:689 --name myldap --detach osixia/openldap
 
-docker exec myldap ldapsearch -x -H ldap://localhost -b dc=vocus,dc=com,dc=au -D "cn=admin,dc=vocus,dc=com,dc=au" -w admin
+docker exec myldap ldapsearch -x -H ldap://localhost -b dc=vocus,dc=com,dc=au -D "cn=admin,dc=vocus,dc=com,dc=au" -w pass
 ```
 
  - [ldap admin](http://www.ldapadmin.org/docs/introduction.html)
 
+
+# GUI client
+- Hostname: `localhost`
+- Base ND: `dc=vocus,dc=com,dc=au`
+- Port: `389`
+- Protocol: `LDAP v3`
+- Authentication Method: Simple Authentication
+- User DN: `cn=admin,dc=vocus,dc=com,dc=au`
+- Password: `pass`
 
 # add new user
 
