--- a/_posts/2019-09-09-nas.md
+++ b/_posts/2019-09-09-nas.md
@@ -4,7 +4,7 @@ title: NAS
 date: 2019-09-09 12:35 +0000
 ---
 
-
+## NAS
 * [QNAP TS-431P](https://www.qnapshop.com.au/QNAP-TS-431P-4-Bay-Diskless-NAS-ARM-Cortex-A15-dual-core-1.4GHz-CPU?gclid=Cj0KCQjwwb3rBRDrARIsALR3Xebzb5mLQnpDFAGPiIlotRzVhplRyOgl_8jojmuphoUN_wl_8b5XBvkaAsgyEALw_wcB)
 * [TS-431P2](https://www.qnap.com/en-au/product/ts-431p2)
 * [排骨玩机经验 篇一：家用NAS的需求与选购](https://post.smzdm.com/p/620093/)
@@ -12,6 +12,10 @@ date: 2019-09-09 12:35 +0000
 * [家用的 NAS 有哪些推荐？](https://www.zhihu.com/question/20392796)
 * [TS-431P VS TS-431P2](https://www.reddit.com/r/NAScompares/comments/702jnt/ts431p_vs_ts431p2/)
 
+
+## RAID
+
+- [RAID有哪几种？有什么区别？](https://www.zhihu.com/question/20131784)
 
 
 
