--- a/_posts/2020-10-26-openfaas.md
+++ b/_posts/2020-10-26-openfaas.md
@@ -44,5 +44,17 @@ $ echo "OpenFaaS!" | faas-cli invoke figlet
       |_|
 ```
 
+## Function example
+
+```bash
+faas-cli new --lang python hello-python
+
+faas-cli build -f ./hello-python.yml
+
+faas-cli deploy -f ./hello-python.yml
+
+echo "OpenFaaS!" | faas-cli invoke hello-python
+```
+
 
 * [Document cn](https://jimmysong.io/kubernetes-handbook/usecases/openfaas-quick-start.html)
