--- a/_posts/2020-10-26-openfaas.md
+++ b/_posts/2020-10-26-openfaas.md
@@ -54,6 +54,8 @@ faas-cli build -f ./hello-python.yml
 faas-cli deploy -f ./hello-python.yml
 
 echo "OpenFaaS!" | faas-cli invoke hello-python
+
+curl -X POST --data "hello world" http://127.0.0.1:8080/function/hello-python
 ```
 
 
