--- a/_posts/2021-07-17-ffmpeg.md
+++ b/_posts/2021-07-17-ffmpeg.md
@@ -4,11 +4,11 @@ title: ffmpeg
 date: 2021-07-17 12:37 +0000
 ---
 
-```bash
-# Adjust the CRF value till the quality/size tradeoff is ok. Lower values produce bigger but better files.
+```c
+// Adjust the CRF value till the quality/size tradeoff is ok. Lower values produce bigger but better files.
 fmpeg -i input.mp4 -c:v libvpx-vp9 -crf 30 -b:v 0 -b:a 128k -c:a libopus output.webm
 
-# The default encoder for WebM, libvpx, requires that if CRF mode is used, bitrate has to be set to 0. 
+// The default encoder for WebM, libvpx, requires that if CRF mode is used, bitrate has to be set to 0. 
 ffmpeg -i lucy.mp4 -c:v libvpx-vp9 -crf 4 -b:v 0 lucy.webm
 
 ```
