add and update post

--- a/_posts/2021-07-17-ffmpeg.md
+++ b/_posts/2021-07-17-ffmpeg.md
@@ -4,6 +4,20 @@ title: ffmpeg
 date: 2021-07-17 12:37 +0000
 ---
 
+
+
+[ffmpeg - Convert MP4 to WebM, poor results](https://stackoverflow.com/questions/47510489/ffmpeg-convert-mp4-to-webm-poor-results)
+
+[How do i Convert an MP4 (H264,AAC) to WebM with zero quality loss using FFMPEG?](https://stackoverflow.com/questions/52243759/how-do-i-convert-an-mp4-h264-aac-to-webm-with-zero-quality-loss-using-ffmpeg)
+
+
+[Converting video from 1080p to 720p with smallest quality loss using ffmpeg
+](https://superuser.com/questions/714804/converting-video-from-1080p-to-720p-with-smallest-quality-loss-using-ffmpeg)
+
+[Fix bad files and streams with ffmpeg so VLC and other players would not crash
+](https://video.stackexchange.com/questions/18220/fix-bad-files-and-streams-with-ffmpeg-so-vlc-and-other-players-would-not-crash/18226)
+
+
 ```c
 // Adjust the CRF value till the quality/size tradeoff is ok. Lower values produce bigger but better files.
 fmpeg -i input.mp4 -c:v libvpx-vp9 -crf 30 -b:v 0 -b:a 128k -c:a libopus output.webm
@@ -11,11 +25,13 @@ fmpeg -i input.mp4 -c:v libvpx-vp9 -crf 30 -b:v 0 -b:a 128k -c:a libopus output.
 // The default encoder for WebM, libvpx, requires that if CRF mode is used, bitrate has to be set to 0. 
 ffmpeg -i lucy.mp4 -c:v libvpx-vp9 -crf 4 -b:v 0 lucy.webm
 
+// Changing image size
+ffmpeg -i MyMovie.mkv -vf scale=-1:720 -c:v libx264 -crf 0 -preset veryslow -c:a copy MyMovie_720p.mkv
+
+//  fix video time index
+ffmpeg -err_detect ignore_err -i video.mkv -c copy video_fixed.mkv
 ```
 
-[ffmpeg - Convert MP4 to WebM, poor results](https://stackoverflow.com/questions/47510489/ffmpeg-convert-mp4-to-webm-poor-results)
-
-[How do i Convert an MP4 (H264,AAC) to WebM with zero quality loss using FFMPEG?](https://stackoverflow.com/questions/52243759/how-do-i-convert-an-mp4-h264-aac-to-webm-with-zero-quality-loss-using-ffmpeg)
 
 
 ffmpeg `-crf`
